--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -47,6 +48,7 @@
     "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-redux": "^8.1.2",
     "recharts": "^2.8.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
