--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,119 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es2021": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "extends": [
+    "eslint:recommended",
+    "airbnb",
+    "airbnb/hooks",
+    "plugin:react/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:jsx-a11y/recommended",
+    "plugin:react-hooks/recommended",
+    "prettier"
+  ],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true,
+      "tsx": true
+    },
+    "ecmaVersion": 11,
+    "sourceType": "module"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "plugins": [
+    "react",
+    "react-hooks",
+    "prettier"
+  ],
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js",
+          ".jsx",
+          ".ts",
+          ".tsx"
+        ]
+      }
+    ],
+    "react/display-name": 1,
+    "prettier/prettier": [
+      "error",
+      {},
+      {
+        "usePrettierrc": true
+      }
+    ],
+    "@typescript-eslint/consistent-type-imports": "off",
+    "@typescript-eslint/ban-types": "off",
+    "@typescript-eslint/no-misused-promises": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/no-invalid-void-type": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/consistent-type-assertions": "off"
+  },
+  "overrides": [
+    {
+      "files": [
+        "*.ts",
+        "*.tsx",
+        ".js",
+        ".jsx"
+      ],
+      "rules": {
+        "import/prefer-default-export": "off",
+        "import/extensions": "off",
+        "import/no-unresolved": "off",
+        "no-unused-vars": "warn",
+        "no-unused-expressions": "warn",
+        "no-use-before-define": "warn",
+        "array-callback-return": "warn",
+        "no-param-reassign": "off",
+        "no-shadow": "off",
+        "react/jsx-props-no-spreading": "off",
+        "react/function-component-definition": "off",
+        "react/destructuring-assignment": "warn",
+        "no-nested-ternary": "warn",
+        "prefer-regex-literals": "warn",
+        "jsx-a11y/click-events-have-key-events": "off",
+        "jsx-a11y/no-static-element-interactions": "off",
+        "react/no-unused-prop-types": "warn",
+        "react/jsx-key": "warn",
+        "camelcase": "warn",
+        "no-undef": "warn",
+        "react/no-array-index-key": "warn",
+        "jsx-a11y/media-has-caption": "warn",
+        "react/jsx-no-useless-fragment": "warn",
+        "eqeqeq": "off",
+        "jsx-a11y/iframe-has-title": "warn",
+        "react-hooks/exhaustive-deps": "warn",
+        "react-hooks/rules-of-hooks": "warn",
+        "no-unsafe-optional-chaining": "warn",
+        "consistent-return": "warn",
+        "import/order": "warn",
+        "react/jsx-curly-brace-presence": "warn",
+        "react/require-default-props": "warn",
+        "react/prop-types": "off",
+        "no-unneeded-ternary": "off",
+        "react/jsx-boolean-value": "warn",
+        "jsx-a11y/label-has-associated-control": "off",
+        "no-underscore-dangle": "off"
+      }
+    }
+  ]
 }
