--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "postinstall": "prisma generate",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore ."
@@ -61,7 +62,11 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-no-null": "^1.0.2",
+    "eslint-plugin-storybook": "^0.6.14",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "prisma": "^5.3.1"
